# trust-assembly

./: .gitignore  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  Dockerfile.dev.offline  Dockerfile.offline  OFFLINE-DOCKER-README.md  PHASE_ONE_IMPLEMENTATION.md  README.md  docker-compose.dev.offline.yml  docker-compose.dev.yml  docker-compose.offline.yml  docker-compose.yml  prepare-offline.sh  test-offline.sh
apps/: README.md
apps/browser-extension/: README.md  manifest.json  new_headline.html  popup.html  webpack.config.js
apps/browser-extension/configs/: config.test.ts
apps/browser-extension/src/: background.ts  contentScript.ts  newHeadline.ts  popup.ts
apps/webapp/: Dockerfile  Dockerfile.dev  db.local.env  deno.json  docker-compose.dev.yml  docker-compose.yml  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
apps/webapp/api/: auth.ts  automation.ts  basicDbRepo.ts  cliInterface.ts  env.ts  fakeDb.ts  main.ts  nessie.config.ts  replacements.ts  sampleReplacementHeadlines.ts  sessionUtils.ts  sessions.ts  test.ts  transformations.ts  v1Api.ts
apps/webapp/src/: App.css  App.tsx  Hello.tsx  Index.tsx  NewHeadline.tsx  ParsedArticle.tsx  Replacements.tsx  index.css
apps/webapp/src/backend/: api.ts
docs/: architecture.md  boring-bomb-architecture-doc.md
docs/diagrams/: architecture.puml  database.puml
headline_transform/: README.md  pyproject.toml
headline_transform/headline_transform/: cli.py  schemas.py  services.py
headline_transform/headline_transform/llm_providers/: __init__.py  base.py  openai.py  test.py
(+28 files in other folders)
